<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".EquipPage"
    android:id="@+id/equipPageBg">

    <ImageView
        android:id="@+id/equipPageImage"
        android:layout_width="0dp"
        android:layout_height="209dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="377dp"
        android:contentDescription="@string/setPageIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/arbiter" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/basic_button_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equipPageImage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/equipBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/equipFaction"
                    android:textColor="@color/basic_button_text"
                    android:textSize="14sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/equipChapter"
                    android:textColor="@color/basic_button_text"
                    android:textSize="14sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/equipPageFaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/basic_button_text"
                    android:textSize="14sp">

                </TextView>

                <TextView
                    android:id="@+id/equipPageChapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/basic_button_text"
                    android:textSize="14sp">

                </TextView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/setDescrition"
        android:textColor="@color/basic_button_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.204" />
</androidx.constraintlayout.widget.ConstraintLayout>